<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.casadocodigo.boaviagem.MainActivity" >

	<ImageView 
	    android:id="@+id/imageView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginBottom="50dp"
	    android:contentDescription="@string/logo"
	    android:src="@drawable/logo" />
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/usuario" />   
	
	<EditText 
	    android:id="@+id/usuario"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text">
	<requestFocus />
	
	</EditText>	
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/senha" />
	
	<EditText 
	    android:id="@+id/senha"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"/>
	
	<Button 
	    android:id="@+id/btnEntrar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/entrar"
	    android:onClick="Login"/>
	
</LinearLayout>
