<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.casadocodigo.boaviagem.DashBoardActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" 
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--elementos aqui  -->
    	    
    	    <TextView 
    	        android:id="@+id/novo_gasto"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="30dp"
    	        android:layout_marginTop="80dp"
    	        android:clickable="true"
    	        android:drawableTop="@drawable/novo_gasto"
    	        android:onClick="selecionarOpcao"
    	        android:text="@string/novo_gasto"
    	        android:textColor="#000"
    	        android:textStyle="bold"/>
    	    
    	    <TextView 
    	        android:id="@+id/nova_viagem"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignParentRight="true"
    	        android:layout_alignTop="@id/novo_gasto"
    	        android:layout_marginRight="40dp"
    	        android:clickable="true"
    	        android:drawableTop="@drawable/nova_viagem"
    	        android:onClick="selecionarOpcao"
    	        android:text="@string/nova_viagem"
    	        android:textColor="#000"
    	        android:textStyle="bold"/>
    	    
    	    <TextView 
    	        android:id="@+id/minhas_viagens"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignLeft="@id/novo_gasto"
    	        android:layout_alignParentBottom="true"
    	        android:layout_marginBottom="120dp"
    	        android:clickable="true"
    	        android:drawableTop="@drawable/minhas_viagens"
    	        android:onClick="selecionarOpcao"
    	        android:text="@string/minhas_viagens"
    	        android:textColor="#000"
    	        android:textStyle="bold"/>
    	    
    	    <TextView 
    	        android:id="@+id/configuracoes"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_alignBottom="@id/minhas_viagens"
    	        android:layout_alignRight="@id/nova_viagem"
    	        android:clickable="true"
    	        android:onClick="selecionarOpcao"
    	        android:drawableTop="@drawable/configuracoes"
    	        android:text="@string/configuracoes"
    	        android:textColor="#000"
    	        android:textStyle="bold" />
    	    
    </RelativeLayout>

</LinearLayout>
